# vehicle-routing

./: Cargo.toml  README.md  compile.sh  run.sh  runAll.sh  team.txt
input/ip/: results.opt
output/vrp/: 101_11_2.sol  101_8_1.sol  121_7_1.sol  135_7_1.sol  151_15_1.sol  16_5_1.sol  200_16_2.sol  21_4_1.sol  241_22_1.sol  262_25_1.sol  30_4_1.sol  386_47_1.sol  41_14_1.sol  45_4_1.sol  51_5_1.sol  5_4_10.sol  76_8_2.sol
src/: vehicle_routing.rs
src/ails/: ails.rs  mod.rs
src/ails/vrp/: client.rs  graph.rs  mod.rs  problem.rs  routing_plan.rs  solution.rs
src/ip_solver/: branch_and_bound.rs
