[package]
name = "vehicle_routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
ordered-float = "4.2.0"

[lib]
name = "vehicle_routing"
path = "src/vehicle_routing.rs"