[package]
name = "vehicle_routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blossom = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
clarabel = "0.7.1"
env_logger = "0.11.3"
good_lp = { version = "1.8.1", features=["clarabel"], default-features = false }
log = "0.4.21"
ordered-float = "4.2.0"
priority-queue = "2.0.2"

[lib]
name = "vehicle_routing"
path = "src/vehicle_routing.rs"
